# github-actions-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  ghautils.py  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md  FUNDING.yml
.github/workflows/: publish.yml
gha-cli/: ghautils.py
gha_cli/: cli.py  scanner.py
