[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
github-actions-cli = "gha_cli.cli:cli"
#github-scanner = "gha_cli.scanner:cli"

[tool.poetry]
name = "github-actions-cli"
version = "1.2.0"
description = "GitHub Actions CLI - allows updating workflows, etc."
readme = "README.md"
keywords = ["GitHub Actions", "CLI"]
packages = [
    { include = "gha_cli" },
]

authors = [
    "Daniel Moran <daniel@moransoftware.ca>",
]
maintainers = [
    "Daniel Moran <daniel@moransoftware.ca>",
]
license = "BSD-3-Clause"
classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
homepage = "https://github.com/dsoftwareinc/github-actions-cli"
documentation = "https://github.com/dsoftwareinc/github-actions-cli"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dsoftwareinc/github-actions-cli/issues"
"Funding" = "https://github.com/sponsors/cunla"

[tool.poetry.dependencies]
python = "^3.10"
pygithub = "^2.6"
pyyaml = "^6"
click = "^8.2"
cffi = "^1.17.1"
coloredlogs = "^15"

[tool.poetry.group.dev.dependencies]
poetry = "^2.1"
ruff = "^0.12"

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    ".github",
    "__pycache__",
    "dist",
    "venv",
    ".venv"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

