[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-actions-cli"
version = "1.2.3"
description = "GitHub Actions CLI - allows updating workflows, etc."
authors = [{ name = "Daniel Moran", email = "daniel@moransoftware.ca" }]
requires-python = "~=3.10"
readme = "README.md"
license = "BSD-3-Clause"
maintainers = [{ name = "Daniel Moran", email = "daniel@moransoftware.ca" }]
keywords = [
    "GitHub Actions",
    "CLI",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pygithub~=2.6",
    "pyyaml>=6,<7",
    "click~=8.2",
    "cffi>=1.17.1,<2",
    "coloredlogs>=15,<16",
]

[project.urls]
Homepage = "https://github.com/dsoftwareinc/github-actions-cli"
Documentation = "https://github.com/dsoftwareinc/github-actions-cli"
"Bug Tracker" = "https://github.com/dsoftwareinc/github-actions-cli/issues"
Funding = "https://github.com/sponsors/cunla"

[project.scripts]
github-actions-cli = "gha_cli.cli:cli"

[dependency-groups]
dev = [
    "poetry~=2.1",
    "ruff>=0.12,<0.13",
]

[tool.hatch.build.targets.sdist]
include = ["gha_cli"]

[tool.hatch.build.targets.wheel]
include = ["gha_cli"]

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    ".github",
    "__pycache__",
    "dist",
    "venv",
    ".venv"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

